--- a/MiniTestFramework/MiniTestRunner/MiniTestRunner/MiniTestRunner.csproj
+++ b/MiniTestFramework/MiniTestRunner/MiniTestRunner/MiniTestRunner.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MiniTest\MiniTest\MiniTest.csproj" />
+    <PackageReference Include="Moq" Version="4.20.72" />
   </ItemGroup>
 
   <ItemGroup>
